AG-11021 fix devtools dark theme
Merge in EXTENSIONS/browser-extension from fix/AG-11021 to master

Squashed commit of the following:

commit 0bea33f7f9f830c755f8590fd408eb2559079f6a
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Nov 3 17:03:46 2021 +0300

    fix devtools dark theme

--- a/Extension/assets/css/devtools/dark.css
+++ b/Extension/assets/css/devtools/dark.css
@@ -6,6 +6,7 @@
 
 body.-theme-with-dark-background {
     color: rgb(213, 213, 213);
+    background-color: rgb(32, 33, 36);
 }
 
 .-theme-with-dark-background .platform-linux {
